--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marco Curzi | Consulenza Professionale</title>
+  <title>MARCO CURZI | Consulenza Professionale</title>
   <meta name="description" content="Consulenza professionale per aziende e privati. Sicurezza sul lavoro, verifiche tecniche, soluzioni su misura." />
 
   <!-- Google Fonts -->
@@ -297,7 +297,7 @@
     <div class="container">
       <div class="about-grid">
         <div class="about-img-wrap">
-          <!-- Sostituisci con: <img src="foto-profilo.jpg" alt="Marco Curzi" /> -->
+          <!-- Sostituisci con: <img src="foto-profilo.jpg" alt="MARCO CURZI" /> -->
           <div class="about-img-placeholder">👤</div>
         </div>
         <div class="about-text">
@@ -349,7 +349,7 @@
             <div class="contact-item-icon">📍</div>
             <div>
               <div class="contact-item-label">Sede</div>
-              <div class="contact-item-value">Jesi (AN), The Marches, Italia</div>
+              <div class="contact-item-value">Fano (AN), Pesaro Urbino, Italia</div>
             </div>
           </div>
           <div class="contact-item">
@@ -384,7 +384,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container">
-      <p>© 2026 <span>Marco Curzi</span> — P.IVA xxxxxxxxxx — Jesi (AN), Italia</p>
+      <p>© 2026 <span>MARCO CURZI</span> — P.IVA xxxxxxxxxx — Jesi (AN), Italia</p>
     </div>
   </footer>
 
