--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <div class="contact-item-icon">✉️</div>
             <div>
               <div class="contact-item-label">Email</div>
-              <div class="contact-item-value">info@marcocurzi.it</div>
+              <div class="contact-item-value">marcocurzi.info@gmail.com</div>
             </div>
           </div>
           <div class="contact-item">
