--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   <!-- NAVBAR -->
   <nav>
     <div class="nav-inner">
-      <div class="logo">Marco <span>Curzi</span></div>
+      <div class="logo">MARCO <span>CURZI</span></div>
       <ul class="nav-links">
         <li><a href="#servizi">Servizi</a></li>
         <li><a href="#chi-sono">Chi sono</a></li>
