--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container">
-      <p>© 2026 <span>MARCO CURZI</span> — P.IVA xxxxxxxxxx — Fano, 61032 (PU), Italia</p>
+      <p>© 2026 <span>MARCO CURZI</span> — Z.Industriale Bellocchi, Fano, 61032 (PU), Italia</p>
     </div>
   </footer>
 
