--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <div class="contact-item-icon">📍</div>
             <div>
               <div class="contact-item-label">Sede</div>
-              <div class="contact-item-value">Fano (AN), Pesaro Urbino, Italia</div>
+              <div class="contact-item-value">Fano (PU), Pesaro Urbino, Italia</div>
             </div>
           </div>
           <div class="contact-item">
